Добавлен функционал сохранения и получения истории просмотра тасков, эпиков, подзадач добавлены Unit-тесты